--- a/01.md
+++ b/01.md
@@ -1,81 +1,4 @@
-# Single-structure and ensemble refinement with cryo-EM maps and EMMIVox
-
-## Origin
-
-This tutorial has been adapted from a masterclass created by Max Bonomi and Samuel Hoff.
-
-## Aims
-
-The aim of this tutorial is to learn how to use PLUMED to perform single-structure and ensemble refinement using cryo-EM maps and EMMIVox.
-
-## Objectives
-
-Once this tutorial is completed, users will be able to:
-
-- Perform single-structure refinement using cryo-EM maps and MD simulations.
-- Perform ensemble refinement using cryo-EM maps and MD simulations.
- 
-## Overview of the theory 
-
-The EMMIVox approach is described in the following publication:
-
-S. E. Hoff, F. E. Thomasen, K. Lindorff-Larsen, M. Bonomi. Accurate model and ensemble refinement using cryo-electron microscopy maps and Bayesian inference.
-PLoS Comput. Biol. 20 (2024) e1012180. doi: [10.1371/journal.pcbi.1012180](https://doi.org/10.1371/journal.pcbi.1012180).
-
-## Software requirements
-
- Make sure you have installed:
-
- * A modern C++ compiler that supports OpenMP parallelization and C++17.
- * MPI library/compilers for multi-replica ensemble simulations.
- * Cuda, needed by both GROMACS and PLUMED. The exact version depends a bit on how old your GPUs are.
- * [LibTorch](https://pytorch.org/get-started/locally/). Make sure you download the C++ version (LibTorch, not pytorch) that is supported by the Cuda version you installed; 
- * Conda to install the python libraries needed by the pre- and post-processing scripts. Have a look [here](https://github.com/cosblab/EMMIVox/tree/main/scripts) for more info about the libraries that you need to install.
- * [Phenix](https://phenix-online.org/documentation/index.html) (any recent version), if you want to validate single-structure refinement. Not really needed for ensemble modelling.
-
-## PLUMED installation
-
-### 1. Getting PLUMED
-
-EMMIVox is currently implemented in the GitHub master branch of PLUMED, which you can obtain with:
-
-`git clone https://github.com/plumed/plumed2.git`
-
-or downloading the following zip archive:
-
-`wget https://github.com/plumed/plumed2/archive/refs/heads/master.zip`
-
-### 2. Configuring and compiling PLUMED
- 
-Please have a look [here](https://www.plumed.org/doc-master/user-doc/html/_i_s_d_b.html) for detailed instructions about compiling PLUMED with Libtorch support.
-The main point is to enable Libtorch with:
-
-`./configure --enable-libtorch`
-
-## GROMACS installation
-
-Detailed instructions about patching GROMACS with PLUMED, configuration and installation are available [here](https://www.plumed.org/doc-master/user-doc/html/_installation.html).
-
-## Resources
-
-This repository is organized in the following two directories:
-* `scripts`: python scripts used for preprocessing and analysis of EMMIVox simulations
-* `tutorials`: complete tutorials for single-structure and ensemble refinement
-
-## Overview of the system
-
-<p align="center">
-  <img src="tau.png" width="400">
-</p>
-
-The system under study is a Tau filament resolved at 1.9 Angstrom by the Scheres group
- ([PDB 7P6A](https://www.rcsb.org/structure/7P6A), [EMD 13223](https://www.ebi.ac.uk/emdb/EMD-13223)). The system is composed by 5 identical chains, for a total of 8335 solute atoms.
-We will simulate the system using the CHARMM36m force field in explicit TIP3P water, for a total of 40958 atoms. The reference is:
-
-[Shi, Y., Zhang, W., Yang, Y. et al. Structure-based classification of tauopathies. Nature 598, 359–363 (2021)](https://doi.org/10.1038/s41586-021-03911-7)
-
-
-# Exercise 1: single-structure refinement with EMMIVox
+# Tutorial 1: single-structure refinement with EMMIVox
 
 These are the steps for refining a single structural model into a cryo-EM maps with EMMIVox.
 Each step of the procedure will be carried out in a separate directory.
@@ -236,58 +159,3 @@ We need to prepare the system with an energy minimization and equilibration at r
 
 
    **Working directory**: `5-Analysis`
-
-
-# Exercise 2: ensemble refinement with EMMIVox
-
-These are the steps to do ensemble modelling using a cryo-EM map and EMMIVox.
-Each step of the procedure will be carried out in a separate directory.
-
-**Note**: To do ensemble modelling you need to first complete the single-structure refinement tutorial.
-
-## 0. Production 
-
-   * Prepare the input files and directories for ensemble modelling with 16 replicas using:
-
-     `bash prepare_PLUMED_Ensemble_input.sh 16`
-
-     You can specify fewer or more replicas depending on the number of CPU cores and GPUs available.
-
-     **Note**: If you have a monomeric protein or a heterocomplex, you need to edit `plumed_EMMI_template.dat` before executing the `prepare_PLUMED_Ensemble_input.sh` script
-               and comment the line starting with `BFACT_NOCHAIN`. This option is used here since we are modelling 5 identical chains and
-               we want the Bfactor of the same residue in different chains to be equal.
-
-   * Run a 10-ns long simulation in parallel using 16 MPI processes, each one parallelized on multiple CPU cores (`$OMP_NUM_THREADS`). 
-     You might need to adapt this line depending on your command to submit parallel jobs, i.e. srun, mpiexec, or mpirun.
-
-     `srun -N 16 gmx_mpi mdrun -pin on -ntomp $OMP_NUM_THREADS -plumed plumed_EMMI.dat -s production.tpr -multidir rep-* -nsteps 5000000`
-
-     **Note**: Usually a good setup for multiple-replica simulations is to allocate 1 GPU to each replica, and 6-10 CPU cores (`$OMP_NUM_THREADS`) per replica depending on the system size. You can safely allocate (using your job manager, i.e. slurm or pbs) 2 replicas on the same GPU without significant loss in performance.  
-
-**Working directory**: `0-Production` 
-
-## 1. Postprocessing and validation 
-
-   * We first need to concatenate the trajectories of all replicas and fix discontinuities due to Periodic Boundary Conditions:
-
-     `bash prepare_PLUMED_Ensemble_analysis.sh`
-
-   * Now we need to transform back the concatenated trajectory `traj-all-PBC.xtc` to fit the original cryo-EM map 
-     using the `transformation.dat` created during the map preparation stage of single-structure refinement:
-
-     `python align-XTC.py conf_map.pdb traj-all-PBC.xtc traj-all-PBC-align.xtc ../../1-refinement/1-Map-Preparation/transformation.dat` 
-
-   * We add a Bfactor column to the reference PDB (`conf_map.pdb`). These Bfactors are the
-     same for all residues, they were set before doing ensemble modelling equal to the minimum Bfactor found in the single-structure refinement:
-
-     `python add-BFACT.py conf_map.pdb ../0-Production/EMMIStatus conf_EMMIVOX.pdb`
-
-   * And finally we calculate model fit to the data (CC_mask) of the original PDB `7P6A.pdb` and of our ensemble:
-
-     `python cryo-EM_validate.py ../../1-refinement/1-Map-Preparation/emd_13223.map --pdbA=../../1-refinement/1-Map-Preparation/7P6A.pdb --pdbC=conf_EMMIVOX.pdb --trjC=traj-all-PBC-align.xtc --threshold=0.0`
-
-     **Note**: if you performed energy minimization and validation after single-structure refinement, you can compare also with the EMMIVOX model:
-
-     `python cryo-EM_validate.py ../../1-refinement/1-Map-Preparation/emd_13223.map --pdbA=../../1-refinement/5-Analysis/conf_EMMIVOX.pdb --pdbC=conf_EMMIVOX.pdb --trjC=traj-all-PBC-align.xtc --threshold=0.0`
-
-**Working directory**: `1-Analysis`
