--- a/01.md
+++ b/01.md
@@ -1,7 +1,8 @@
 # Tutorial 1: single-structure refinement with EMMIVox
 
 These are the steps for refining a single structural model into a cryo-EM maps with EMMIVox.
-Each step of the procedure will be carried out in a separate directory.
+
+**Note**: all the python scripts are contained in the `scripts` folder. Please run each step of the tutorial in the dedicated subfolder of `tutorials/1-refinement` referred to as **Working directory**..
 
 ## 0. System setup
 
