--- a/02.md
+++ b/02.md
@@ -1,9 +1,10 @@
 # Tutorial 2: ensemble refinement with EMMIVox
 
 These are the steps to do ensemble modelling using a cryo-EM map and EMMIVox.
-Each step of the procedure will be carried out in a separate directory.
 
-**Note**: To do ensemble modelling you need to first complete the single-structure refinement tutorial.
+**Note 1**: To do ensemble modelling you need to first complete the single-structure refinement tutorial.
+
+**Note 2**: all the python scripts are contained in the `scripts` folder. Please run each step of the tutorial in the dedicated subfolder of `tutorials/2-ensemble` referred to as **Working directory**.
 
 ## 0. Production 
 
