--- a/01.md
+++ b/01.md
@@ -22,8 +22,6 @@ These are the steps for refining a single structural model into a cryo-EM maps w
 
         `python make_ndx.py step3_input.gro "protein" System-MAP --ndx index.ndx`
        
-        **Note**: if you have a small molecule or other non-protein (and non-water) atoms that you want to include in the EMMIVox restraint, please add them to the MDAnalysis selection.
-
      * `System-XTC`, which contains all the atoms that will be written to the GROMACS trajectory file (xtc format). In this case, we want to write all the atoms used for the cryo-EM calculation plus hydrogen and carboxylate oxygens of glutamic/aspartic acid.
  
         `python make_XTC_ndx.py System-MAP-H --ndx index.ndx`
@@ -41,21 +39,15 @@ These are the steps for refining a single structural model into a cryo-EM maps w
 
       `python cryo-EM_preprocess.py emd_13223.map 0.9 emd_plumed.dat --zone 3.5 --zone_PDB 7P6A.pdb --zone_sel "protein" --halfmaps emd_13223_half_map_1.map emd_13223_half_map_2.map > log.preprocess` 
 
-       **Note 1**: The two half maps should be registered (aligned and with the same grid parameters). If they are not, you can use this command to register them:
+       **Note 1**: The value `0.9` is the cutoff to exclude correlated voxels (above this threshold). If you want to keep all the voxels of the input map, set this to `1.0`. `emd_plumed.dat` is the name of the output map in PLUMED format. `--zone` can be used to keep only voxels within a certain distance (here 3.5 Ang) from the model specified by `--zone_PDB`.
 
-       `python map_registration.py emd.map emd_half_map_1.map`
-
-       `python map_registration.py emd.map emd_half_map_2.map`
-
-       **Note 2**: The value `0.9` is the cutoff to exclude correlated voxels (above this threshold). If you want to keep all the voxels of the input map, set this to `1.0`. `emd_plumed.dat` is the name of the output map in PLUMED format. `--zone` can be used to keep only voxels within a certain distance (here 3.5 Ang) from the model specified by `--zone_PDB`. 
-
-       **Note 3**: If you want to give a look at the map after the preparation, you can inspect `emd_plumed.mrc`. This is the map that will be used in PLUMED for modelling and corresponds to `emd_plumed.dat`.
+       **Note 2**: If you want to give a look at the map after the preparation, you can inspect `emd_plumed.mrc`. This is the map that will be used in PLUMED for modelling and corresponds to `emd_plumed.dat`.
 
    * Now we align the cryo-EM map in PLUMED format (`emd_plumed.dat`) to the GROMACS conformation (`step3_input.pdb`). This is needed because CHARMM-GUI probably moved the initial structure during system setup. 
 
       `python align-VOXELS.py ../0-Building/step3_input.pdb 7P6A.pdb emd_plumed_aligned.dat emd_plumed.dat --ref_sel "backbone" --mobile_sel "backbone and not altLoc B and not (name O and resid 379)"`
 
-       **Note 4**: Since there are some discrepancies between the number of atoms in the two PDBs, we have specified a selection of common atoms for alignment using [`MDAnalysis`](https://www.mdanalysis.org) selection syntax. `--ref_sel` refers to `step3_input.pdb` and `--mobile_sel` to `7P6A.pdb`. You can verify that the alignment is correct by checking the RMSD value in output: it should be zero as the two models are identical.
+       **Note 3**: Since there are some discrepancies between the number of atoms in the two PDBs, we have specified a selection of common atoms for alignment using [`MDAnalysis`](https://www.mdanalysis.org) selection syntax. `--ref_sel` refers to `step3_input.pdb` and `--mobile_sel` to `7P6A.pdb`. You can verify that the alignment is correct by checking the RMSD value in output: it should be zero as the two models are identical.
 
    **Working directory**: `1-Map-Preparation`
 
@@ -73,13 +65,13 @@ We need to prepare the system with an energy minimization and equilibration at r
 
      `gmx_mpi grompp -f 1_npt_posres.mdp -c em.gro  -n ../0-Building/index.ndx -p ../0-Building/topol.top -r em.gro -o npt_posres.tpr -maxwarn 1`
 
-     `gmx_mpi mdrun -pin on -deffnm npt_posres -nsteps 500000`
+     `gmx_mpi mdrun -pin on -deffnm npt_posres -nsteps 500000 -update gpu`
 
    * Do a 2-ns NVT equilibration with positional restraints on everything except water and ions:
 
      `gmx_mpi grompp -f 2_nvt_posres.mdp -c npt_posres.gro -n ../0-Building/index.ndx -p ../0-Building/topol.top -r em.gro -o nvt_posres.tpr -maxwarn 1`
 
-     `gmx_mpi mdrun -pin on -deffnm nvt_posres -nsteps 1000000`
+     `gmx_mpi mdrun -pin on -deffnm nvt_posres -nsteps 1000000 -update gpu`
 
    **Working directory**: `2-Equilibration`
 
@@ -91,10 +83,6 @@ We need to prepare the system with an energy minimization and equilibration at r
 
    Here we are using 8 CPU cores (and the GPU) to postprocess the trajectory with PLUMED. The optimal value of the scale will be printed in `BEST_SCALE` at the end of the optimization. This will be used for both single-structure refinement and ensemble modelling.
 
-   **Note**: If you have a monomeric protein or a heterocomplex, you need to edit `plumed_EMMI_template_BFACT.dat` before executing the `optimize_scale.sh` script
-               and comment the line starting with `BFACT_NOCHAIN`. This option is used here since we are modelling 5 identical chains and 
-               we want the Bfactor of the same residue in different chains to be equal.
-
    **Working directory**: `3-Map-Scaling`
 
 ## 4. Production
@@ -105,9 +93,6 @@ We need to prepare the system with an energy minimization and equilibration at r
 
      `bash prepare_PLUMED_input.sh`
 
-     **Note**: If you have a monomeric protein or a heterocomplex, you need to edit `plumed_EMMI_template.dat` before executing the `prepare_PLUMED_input.sh` script
-               and comment the line starting with `BFACT_NOCHAIN`. This option is used here since we are modelling 5 identical chains and
-               we want the Bfactor of the same residue in different chains to be equal.
 
    * Run a 10-ns long production run following the instructions below, after setting the number of CPU cores to use (`$OMP_NUM_THREADS`). 
 
@@ -115,19 +100,15 @@ We need to prepare the system with an energy minimization and equilibration at r
 
      `gmx_mpi mdrun -pin on -deffnm production -ntomp $OMP_NUM_THREADS -nsteps 5000000 -plumed plumed_EMMI.dat`
 
+     **Note**: Do **not** add the option `-update gpu` when using GROMACS in combination with PLUMED.
+
    **Working directory**: `4-Production`
 
 ## 5. Postprocessing and validation
 
-   **Note**: You do not need to perfom these actions if you are interested only in ensemble modelling.
-    
    * We first need to extract the conformation with best EMMIVox score from our production run and perform a short energy minimization. To setup all the files needed for minimization, you need to execute this script:
      
      `bash prepare_PLUMED_input_emin.sh`
-
-     **Note**: If you have a monomeric protein or a heterocomplex, you need to edit `plumed_EMMI_emin_template.dat` before executing the `prepare_PLUMED_input_emin.sh` script
-               and comment the line starting with `BFACT_NOCHAIN`. This option is used here since we are modelling 5 identical chains and
-               we want the Bfactor of the same residue in different chains to be equal. 
 
    * Now we run energy minimization using 8 CPU cores:
     
@@ -157,6 +138,5 @@ We need to prepare the system with an energy minimization and equilibration at r
       `python cryo-EM_validate.py ../1-Map-Preparation/emd_13223.map --pdbA=conf_EMMIVOX.pdb --threshold=0.0 > CCmask.EMMIVOX`
 
       `python cryo-EM_validate.py ../1-Map-Preparation/emd_13223.map --pdbA=../1-Map-Preparation/7P6A.pdb --threshold=0.0 > CCmask.PDB`
-
 
    **Working directory**: `5-Analysis`
