--- a/01.md
+++ b/01.md
@@ -2,7 +2,7 @@
 
 These are the steps for refining a single structural model into a cryo-EM maps with EMMIVox.
 
-**Note**: all the python scripts are contained in the `scripts` folder. Please run each step of the tutorial in the dedicated subfolder of `tutorials/1-refinement` referred to as **Working directory**..
+**Note**: all the python scripts are contained in the `scripts` folder. Please run each step of the tutorial in the dedicated subfolder of `tutorials/1-refinement` referred to as **Working directory**.
 
 ## 0. System setup
 
