--- a/01.md
+++ b/01.md
@@ -93,6 +93,46 @@ We need to prepare the system with an energy minimization and equilibration at r
 
      `bash prepare_PLUMED_input.sh`
 
+     The generated PLUMED input file, called `plumed_EMMI.dat`, should look like this:
+
+     ```plumed
+     # include topology info
+     MOLINFO STRUCTURE=../3-Map-Scaling/step3_input_xtc.pdb WHOLE
+     # define map atoms
+     system-map: GROUP NDX_FILE=../0-Building/index.ndx NDX_GROUP=System-MAP
+     # make map atoms whole
+     WHOLEMOLECULES ...
+     ADDREFERENCE EMST
+     ENTITY0=system-map STRIDE=4
+     ... WHOLEMOLECULES
+     # create EMMI score
+     EMMIVOX ...
+     # name of this action
+     LABEL=emmi
+     # general parameters
+     TEMP=300.0 NL_STRIDE=50 NL_DIST_CUTOFF=1.0 NL_GAUSS_CUTOFF=3.0
+     # define atoms for cryo-EM restraint and read experimental data
+     ATOMS=system-map DATA_FILE=../1-Map-Preparation/emd_plumed_aligned.dat
+     # info about the experimental map
+     NORM_DENSITY=__FILL__ RESOLUTION=__FILL__
+     # data likelihood (or noise model): Marginal
+     SIGMA_MIN=0.2 GPU
+     # output: in production write with the frequency at which XTC/TRR are written
+     STATUS_FILE=EMMIStatus WRITE_STRIDE=5000
+     # comment this if you have a hetero-complex
+     BFACT_NOCHAIN
+     # in production, you should sample Bfactors
+     DBFACT=0.05 MCBFACT_STRIDE=500 BFACT_SIGMA=0.1
+     # scale factor
+     SCALE=__FILL__
+     # correlation
+     CORRELATION
+     ...
+     # in production, apply bias to system
+     emr: BIASVALUE ARG=emmi.scoreb STRIDE=4
+     # print output to file
+     PRINT ARG=emmi.* FILE=COLVAR STRIDE=5000
+     ```
 
    * Run a 10-ns long production run following the instructions below, after setting the number of CPU cores to use (`$OMP_NUM_THREADS`). 
 
