--- a/01.md
+++ b/01.md
@@ -1,4 +1,4 @@
-# Tutorial 1: single-structure refinement with EMMIVox
+# Tutorial 1: Single-structure refinement with EMMIVox
 
 These are the steps for refining a single structural model into a cryo-EM maps with EMMIVox.
 
