--- a/02.md
+++ b/02.md
@@ -1,4 +1,4 @@
-# Tutorial 2: ensemble refinement with EMMIVox
+# Tutorial 2: Ensemble refinement with EMMIVox
 
 These are the steps to do ensemble modelling using a cryo-EM map and EMMIVox.
 
