--- a/01.md
+++ b/01.md
@@ -32,7 +32,7 @@ These are the steps for refining a single structural model into a cryo-EM maps w
 
    * At this stage we need to download the cryo-EM full map [`emd_13223.map`](https://ftp.ebi.ac.uk/pub/databases/emdb/structures/EMD-13223/map/emd_13223.map.gz).
      the two half-maps [`emd_13223_half_map_1.map`](https://ftp.ebi.ac.uk/pub/databases/emdb/structures/EMD-13223/other/emd_13223_half_map_1.map.gz)
-     and [`emd_13223_half_map_2.map`](https://ftp.ebi.ac.uk/pub/databases/emdb/structures/EMD-13223/other/emd_13223_half_map_1.map.gz),
+     and [`emd_13223_half_map_2.map`](https://ftp.ebi.ac.uk/pub/databases/emdb/structures/EMD-13223/other/emd_13223_half_map_2.map.gz),
      and the PDB [`7P6A.pdb`](https://files.rcsb.org/download/7P6A.pdb), which will be needed to zone the density map close to the model (optional, but speeds up things a lot).
 
    * To convert the input cryo-EM map to PLUMED format, calculate an error map from the two half maps, and optionally filter voxels by correlation, you need to execute this:
@@ -96,6 +96,7 @@ We need to prepare the system with an energy minimization and equilibration at r
      The generated PLUMED input file, called `plumed_EMMI.dat`, should look like this:
 
      ```plumed
+     #SOLUTIONFILE=tutorials/1-refinement/4-Production/plumed.dat
      # include topology info
      MOLINFO STRUCTURE=../3-Map-Scaling/step3_input_xtc.pdb WHOLE
      # define map atoms
