--- a/02.md
+++ b/02.md
@@ -17,6 +17,7 @@ These are the steps to do ensemble modelling using a cryo-EM map and EMMIVox.
      The generated PLUMED input file, called `plumed_EMMI.dat`, should look like this:
 
      ```plumed
+     #SOLUTIONFILE=tutorials/2-ensemble/0-Production/plumed.dat
      # include topology info
      MOLINFO STRUCTURE=../../../1-refinement/3-Map-Scaling/step3_input_xtc.pdb WHOLE
      # define map atoms
