fix solution file

--- a/02.md
+++ b/02.md
@@ -17,7 +17,6 @@ These are the steps to do ensemble modelling using a cryo-EM map and EMMIVox.
      The generated PLUMED input file, called `plumed_EMMI.dat`, should look like this:
 
      ```plumed
-     #SOLUTIONFILE=tutorials/2-ensemble/0-Production/plumed.dat
      # include topology info
      MOLINFO STRUCTURE=../../../1-refinement/3-Map-Scaling/step3_input_xtc.pdb WHOLE
      # define map atoms
@@ -36,7 +35,7 @@ These are the steps to do ensemble modelling using a cryo-EM map and EMMIVox.
      # define atoms for cryo-EM restraint and read experimental data
      ATOMS=system-map DATA_FILE=../../../1-refinement/1-Map-Preparation/emd_plumed_aligned.dat
      # info about the experimental map
-     NORM_DENSITY=__FILL__ RESOLUTION=__FILL__
+     NORM_DENSITY=684.480896 RESOLUTION=0.19
      # data likelihood (or noise model): Marginal
      SIGMA_MIN=0.2 GPU
      # output: in production write with the frequency at which XTC/TRR are written
@@ -48,7 +47,7 @@ These are the steps to do ensemble modelling using a cryo-EM map and EMMIVox.
      # and keep constant and the same for all residues
      BFACT_READ
      # scale factor
-     SCALE=__FILL__
+     SCALE=1.3
      # correlation
      CORRELATION
      ...
