--- a/01.md
+++ b/01.md
@@ -96,7 +96,6 @@ We need to prepare the system with an energy minimization and equilibration at r
      The generated PLUMED input file, called `plumed_EMMI.dat`, should look like this:
 
      ```plumed
-     #SOLUTIONFILE=tutorials/1-refinement/4-Production/plumed.dat
      # include topology info
      MOLINFO STRUCTURE=../3-Map-Scaling/step3_input_xtc.pdb WHOLE
      # define map atoms
@@ -115,7 +114,7 @@ We need to prepare the system with an energy minimization and equilibration at r
      # define atoms for cryo-EM restraint and read experimental data
      ATOMS=system-map DATA_FILE=../1-Map-Preparation/emd_plumed_aligned.dat
      # info about the experimental map
-     NORM_DENSITY=__FILL__ RESOLUTION=__FILL__
+     NORM_DENSITY=684.480896 RESOLUTION=0.19
      # data likelihood (or noise model): Marginal
      SIGMA_MIN=0.2 GPU
      # output: in production write with the frequency at which XTC/TRR are written
@@ -125,7 +124,7 @@ We need to prepare the system with an energy minimization and equilibration at r
      # in production, you should sample Bfactors
      DBFACT=0.05 MCBFACT_STRIDE=500 BFACT_SIGMA=0.1
      # scale factor
-     SCALE=__FILL__
+     SCALE=1.3
      # correlation
      CORRELATION
      ...
