--- a/01.md
+++ b/01.md
@@ -180,3 +180,5 @@ PRINT ARG=emmi.* FILE=COLVAR STRIDE=5000
       `python cryo-EM_validate.py ../1-Map-Preparation/emd_13223.map --pdbA=../1-Map-Preparation/7P6A.pdb --threshold=0.0 > CCmask.PDB`
 
    **Working directory**: `5-Analysis`
+
+##### [Back to EMMIVox home](NAVIGATION.md)
