--- a/02.md
+++ b/02.md
@@ -91,3 +91,5 @@ PRINT ARG=emmi.* FILE=COLVAR STRIDE=5000
      `python cryo-EM_validate.py ../../1-refinement/1-Map-Preparation/emd_13223.map --pdbA=../../1-refinement/5-Analysis/conf_EMMIVOX.pdb --pdbC=conf_EMMIVOX.pdb --trjC=traj-all-PBC-align.xtc --threshold=0.0`
 
 **Working directory**: `1-Analysis`
+
+##### [Back to EMMIVox home](NAVIGATION.md)
